--- a/js-demos/upload.html
+++ b/js-demos/upload.html
@@ -1,5 +1,6 @@
+<h1>WebServ Upload Demo</h1>
 <form action="upload.html" method="post" enctype="multipart/form-data">
-    Select image to upload:
+    Select file to upload to /tmp:
     <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
+    <input type="submit" value="Upload File" name="submit">
 </form>
