Add noscript for docs
FossilOrigin-Name: 359aba959ad875c43e8d97a157449c4583389d4d455ca09000e5f8144d064d3c

--- a/lib/web/index.htm
+++ b/lib/web/index.htm
@@ -23,6 +23,9 @@
 </head>
 
 <body>
+    <noscript> <img src="https://jsish.org/fossil/jsi/doc/tip/www/site/logojsi.png">
+        For Jsi Docs without javascript <a href="https://jsish.org/fossil/jsi/doc/tip/lib/web/md/Index.md">click here!</a>
+    </noscript>
     <div id="app" style="height:100%; width:100%">
         <router-view />        
     </div>
