--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -21,7 +21,7 @@
         window.Vuex = Vuex;
         window.jsiroot = './';        
     </script>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="app/app.js"></script>
 
 </head>
 
