--- a/lib/web/index.htm
+++ b/lib/web/index.htm
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/jsi/web/css/bootstrap-vue.css">
     <link rel="stylesheet" href="/jsi/web/css/animate.css">
     <link rel="stylesheet" href="/jsi/web/css/prism.css">
+    <link rel="stylesheet" href="/jsi/web/css/VuePrismEditor.css">
     <link rel="stylesheet" href="app.css">
     <script type="module">
         // Map /jsi/ with app.js in same dir as index.htm, served by jsish, or nginx with location/clone dir.
@@ -17,6 +18,7 @@
         import "/jsi/web/js/bootstrap-vue.min.js";
         import "/jsi/web/js/vue-markdown-pdq.min.js";
         import "/jsi/web/js/prism.js";
+        import "./js/VuePrismEditor.umd.min.js";
         import "/jsi/web/jsi.js";
         import Vuex from '/js/vuex.js';
         window.Vuex = Vuex;
