--- a/lib/web/index.html
+++ b/lib/web/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap-vue.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/prism.css">
+    <link rel="stylesheet" href="css/VuePrismEditor.css">
     <link rel="stylesheet" href="app/app.css">
     <script type="module">
         // Map 'app', with relative paths for in jsi or builtin clone.
@@ -16,11 +17,13 @@
         import "./js/bootstrap-vue.min.js";
         import "./js/vue-markdown-pdq.min.js";
         import "./js/prism.js";
+        import "./js/VuePrismEditor.umd.min.js";
         import "./jsi.js";
         import Vuex from './js/vuex.js';
         window.Vuex = Vuex;
         window.jsiroot = './';        
     </script>
+
     <script type="module" src="app/app.js"></script>
 
 </head>
