--- a/lib/DebugUI/html/debugui_doc.html
+++ b/lib/DebugUI/html/debugui_doc.html
@@ -47,5 +47,5 @@ Available commands include:
 </pre>
 
 <p>
-The backed for DebugUI is builtin in <a href=http://jsish.org/jsi/www/home.html  target=_blank>Jsish</a>.
+The backed for DebugUI is builtin in .
 </div>
