--- a/www/site/index.html
+++ b/www/site/index.html
@@ -38,7 +38,7 @@ else return e;}
 </p> -->
 
 
-<a href="http://jsish.org/jsi">Jsi</a> is a small <i>javascript</i> interpreter written <b>in C</b>
+<a href="http://jsish.org/">Jsi</a> is a small <i>javascript</i> interpreter written <b>in C</b>
 with builtin <b>Database</b> and <b>Websocket</b> support.
 <p>
 
