--- a/lib/web/index.htm
+++ b/lib/web/index.htm
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/jsi/web/css/animate.css">
     <link rel="stylesheet" href="/jsi/web/css/prism.css">
     <link rel="stylesheet" href="/jsi/web/css/VuePrismEditor.css">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="app/app.css">
     <script type="module">
         // Map /jsi/ with app.js in same dir as index.htm, served by jsish, or nginx with location/clone dir.
         import "/jsi/web/js/vue.js";
@@ -18,13 +18,13 @@
         import "/jsi/web/js/bootstrap-vue.min.js";
         import "/jsi/web/js/vue-markdown-pdq.min.js";
         import "/jsi/web/js/prism.js";
-        import "./js/VuePrismEditor.umd.min.js";
+        import "/jsi/web/js/VuePrismEditor.umd.min.js";
         import "/jsi/web/jsi.js";
-        import Vuex from '/js/vuex.js';
+        import Vuex from '/jsi/web/js/vuex.js';
         window.Vuex = Vuex;
         window.jsiroot = '/jsi';        
     </script>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./app/app.js?root=/jsi"></script>
 </head>
 
 <body>
