JSON stringify/parse fixes
FossilOrigin-Name: 929298cfaf4beb307d064bd3aec82200aae71e4def0c97327807dc11e150a7e2

--- a/lib/www/index.htm
+++ b/lib/www/index.htm
@@ -21,7 +21,7 @@
         import "/jsi/web/js/Jsish.js";
         import Vuex from '/jsi/web/js/vuex.js';
         window.Vuex = Vuex;
-        Jsish.config.jsiroot = '/jsi';
+        Jsish.config.jsiroot = '/jsi/';
         Jsish.config.approot = 'app/';
     </script>
 
