--- a/js-demos/jsig.html
+++ b/js-demos/jsig.html
@@ -2,7 +2,7 @@ Typed Function Arguments demo.
 <p>
 To see warnings open console <i>(F12, Ctrl-Shift-I or Inspect-Element)</i> and reload page.
 
-<script src="../lib/web/jsi.js"></script>
+<script src="../lib/www/jsi.js"></script>
 <script>
     $jsi.include('bark.jsi');
     $jsi.onload(function () {
