--- a/lib/www/index.htm
+++ b/lib/www/index.htm
@@ -3,23 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/jsi/web/css/bootstrap.css">
-    <link rel="stylesheet" href="/jsi/web/css/bootstrap-vue.css">
-    <link rel="stylesheet" href="/jsi/web/css/animate.css">
-    <link rel="stylesheet" href="/jsi/web/css/prism.css">
-    <link rel="stylesheet" href="/jsi/web/css/VuePrismEditor.css">
+    <link rel="stylesheet" href="/jsi/css/bootstrap.css">
+    <link rel="stylesheet" href="/jsi/css/bootstrap-vue.css">
+    <link rel="stylesheet" href="/jsi/css/animate.css">
+    <link rel="stylesheet" href="/jsi/css/prism.css">
+    <link rel="stylesheet" href="/jsi/css/VuePrismEditor.css">
     <script type="module">
         // Map /jsi/ with app.js in same dir as index.htm, served by jsish, or nginx with location/clone dir.
-        import "/jsi/web/js/vue.js";
+        import "/jsi/js/vue.js";
         Vue.config.productionTip=true;
         Vue.config.historyMode=true;
-        import "/jsi/web/js/vue-router.min.js";
-        import "/jsi/web/js/bootstrap-vue.min.js";
-        import "/jsi/web/js/vue-markdown-pdq.min.js";
-        import "/jsi/web/js/prism.js";
-        import "/jsi/web/js/VuePrismEditor.umd.min.js";
-        import "/jsi/web/js/Jsish.js";
-        import Vuex from '/jsi/web/js/vuex.js';
+        import "/jsi/js/vue-router.min.js";
+        import "/jsi/js/bootstrap-vue.min.js";
+        import "/jsi/js/vue-markdown-pdq.min.js";
+        import "/jsi/js/prism.js";
+        import "/jsi/js/VuePrismEditor.umd.min.js";
+        import "/jsi/js/Jsish.js";
+        import Vuex from '/jsi/js/vuex.js';
         window.Vuex = Vuex;
         Jsish.config.jsiroot = '/jsi/';
         Jsish.config.approot = 'app/';
