Docs: fallback to non-import
FossilOrigin-Name: df0679aa17d2e8ca9a729cf5b0abc448b643d632c6dce85f3de9ab53a8572a6d

--- a/lib/www/index.html
+++ b/lib/www/index.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="application-name" content="jsi index.html">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap-vue.css">
+    <link rel="stylesheet" href="./css/animate.css">
+    <link rel="stylesheet" href="./css/prism.css">
+    <link rel="stylesheet" href="./css/VuePrismEditor.css">
+    <script src="./js/vue.js"></script>
+    <script src="./js/vuex.js"></script>
+    <script src="./js/vue-router.min.js"></script>
+    <script src="./js/bootstrap-vue.min.js"></script>
+    <script src="./js/vue-markdown-pdq.min.js"></script>
+    <script src="./js/prism.js"></script>
+    <script src="./js/VuePrismEditor.umd.min.js"></script>
+    <script src="./js/Jsish.js"></script>
     <script>
-        window.VueJsiOptions={jsiroot:'./', approot:'./app/'};
-    </script>
-    <script type="module">
-        import "./VueJsi.js";
-        import "./app/app.js";
+        Jsish.conf({jsiroot:'./', approot:'./app/'})
+        Vue.config.productionTip=true;
     </script>
 </head>
 
@@ -21,5 +32,7 @@
         <app-view />
     </div>
 </body>
+<script src="app/app.js"></script>
+
 </html>
 
