--- a/lib/www/index.htm
+++ b/lib/www/index.htm
@@ -1,15 +1,25 @@
-<!-- index.htm : use on webserver for Vue-history mode, with root set to "lib/www" of repo -->
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="application-name" content="jsi index.htm">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/bootstrap-vue.css">
+    <link rel="stylesheet" href="./css/animate.css">
+    <link rel="stylesheet" href="./css/prism.css">
+    <link rel="stylesheet" href="./css/VuePrismEditor.css">
+    <script src="./js/vue.js"></script>
+    <script src="./js/vuex.js"></script>
+    <script src="./js/vue-router.min.js"></script>
+    <script src="./js/bootstrap-vue.min.js"></script>
+    <script src="./js/vue-markdown-pdq.min.js"></script>
+    <script src="./js/prism.js"></script>
+    <script src="./js/VuePrismEditor.umd.min.js"></script>
+    <script src="./js/Jsish.js"></script>
     <script>
-        window.VueJsiOptions={jsiroot:'./', approot:'./app/', histmode:true, websock:false};
-    </script>
-    <script type="module">
-        import "./VueJsi.js";
-        import "./app/app.js";
+        Jsish.conf({jsiroot:'./', approot:'./app/', histmode:true, websock:false})
+        Vue.config.productionTip=true;
     </script>
 </head>
 
@@ -22,5 +32,7 @@
         <app-view />
     </div>
 </body>
+<script src="app/app.js"></script>
+
 </html>
 
