Sqlite %v update: ignore rowid, Vue sortable
FossilOrigin-Name: 0b3a604c7f0f2e7fa7295ff948c29f26af7ddca5116c50324acf2687564fa206

--- a/lib/www/index.htm
+++ b/lib/www/index.htm
@@ -16,6 +16,8 @@
     <script src="./js/vue-markdown-pdq.min.js"></script>
     <script src="./js/prism.js"></script>
     <script src="./js/VuePrismEditor.umd.min.js"></script>
+    <script src="./js/Sortable.min.js"></script>
+    <script src="./js/vuedraggable.umd.min.js"></script>
     <script src="./js/Jsish.js"></script>
     <script>
         Jsish.conf({jsiroot:'./', approot:'./app/', histmode:true, websock:false});
