--- a/lib/www/index.htm
+++ b/lib/www/index.htm
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="application-name" content="jsi index.htm">
+    <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="./css/bootstrap-vue.css">
     <link rel="stylesheet" href="./css/animate.css">
