--- a/lib/www/index.html
+++ b/lib/www/index.html
@@ -14,6 +14,7 @@
     <script src="./js/vuex.js"></script>
     <script src="./js/vue-router.min.js"></script>
     <script src="./js/bootstrap-vue.min.js"></script>
+    <script src="./js/bootstrap-vue-icons.min.js"></script>
     <script src="./js/vue-markdown-pdq.min.js"></script>
     <script src="./js/prism.js"></script>
     <script src="./js/VuePrismEditor.umd.min.js"></script>
