Finish part2 of move to github
FossilOrigin-Name: 45f85f8f52f11a1e9304fec7065571dc6ec6064023a6881928bf8426986337d8

--- a/lib/DebugUI/html/debugui_doc.html
+++ b/lib/DebugUI/html/debugui_doc.html
@@ -1,7 +1,7 @@
 <div style="margin:8px">
 <H2>DebugUI: a debugger for Jsi</H2>
 
-<a href="http://jsish.org">Jsi</a> is a scripting language for C developers, and
+<a href="https://github.com/pcmacdon/jsish">Jsi</a> is a scripting language for C developers, and
 <i>DebugUI</i> is it's web-based script debugger supporting:
 <ul>
   <li>Breakpoint toggle by double clicking (on whitespace in a line).</li>
