--- a/lib/SqliteUI/html/sqliteui_doc.html
+++ b/lib/SqliteUI/html/sqliteui_doc.html
@@ -1,7 +1,7 @@
 <h2>Sqlite User-Interface</h2>
 
 SqliteUI is a Web user-interface for Sqlite databases
-implemented using [Jsi](http://jsish.org) as backend.
+implemented using [Jsi](https://github.com/pcmacdon/jsish) as backend.
 <p>
 Here is an overview of the UI features:
 <ul>
